--- a/H5P/geschichte_zivi/index.html
+++ b/H5P/geschichte_zivi/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title> Your H5P Standalone Website Title </title>
+  <title> Geschichte des Zivildienstes </title>
   <link type="text/css" rel="stylesheet" media="all" href="./dist/styles/h5p.css" />
   <meta charset="utf-8" />
   <script type="text/javascript" src="./dist/main.bundle.js"></script>
