--- a/audio/index.html
+++ b/audio/index.html
@@ -9,40 +9,46 @@
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"/>
+  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"></script>
 </head>
 <body>
-  <div id="app-zoom-fallback"><!-- used if CSS zoom is not supported -->
+  <div id="app-zoom-fallback">
     <main id="player-container">
-      <div id="slide-display">
-        <div id="slide-image-container" class="slide-side"></div>
+      <div id="slide-wrapper">
+        <div id="slide-display">
+          <div id="slide-image-container" class="slide-side"></div>
 
-        <!-- Text column has an inner wrapper that we scale to always fit -->
-        <div id="slide-text-container" class="slide-side">
-          <div id="slide-text-content"></div>
+          <div id="slide-text-container" class="slide-side">
+            <div id="slide-text-content"></div>
+          </div>
+
+          <audio id="audio-player" controls preload="metadata">
+            Ihr Browser unterstützt das Audio-Element nicht.
+          </audio>
+
+          <div id="quiz-overlay" style="display: none;">
+              <h3 id="quiz-question"></h3>
+              <div id="quiz-options"></div>
+              <p id="quiz-feedback"></p>
+          </div>
         </div>
-
-        <!-- Audio: no crossorigin to avoid CORS issues on remote MP3s -->
-        <audio id="audio-player" controls preload="metadata">
-          Ihr Browser unterstützt das Audio-Element nicht.
-        </audio>
+      </div> </main>
+    <div id="source-container">
+      <div class="source-left">
+        <span id="source-label">Quelle:</span>
+        <span id="source-link-wrap"></span>
       </div>
-
-      <!-- Footer: Quelle + Zoom controls -->
-      <div id="source-container">
-        <div class="source-left">
-          <span id="source-label">Quelle:</span>
-          <span id="source-link-wrap"></span>
-        </div>
-        <div class="source-right">
-          <span id="zoom-hint" title="Wenn Text abgeschnitten ist: Browser-Zoom verkleinern.">
-            Tipp: Browser-Zoom verkleinern (⌘− / Ctrl−). Zurücksetzen: (⌘0 / Ctrl+0).
-          </span>
-        </div>
+      <div class="source-right">
+        <span id="zoom-hint" title="Wenn Text abgeschnitten ist: Browser-Zoom verkleinern.">
+          Tipp: Browser-Zoom verkleinern (⌘− / Ctrl−). Zurücksetzen: (⌘0 / Ctrl+0).
+        </span>
       </div>
-
-    </main>
+    </div>
   </div>
 
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
